# cpp-numerical

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/numerical/: bisection.hpp  derivative.hpp  false-position.hpp  newton-raphson.hpp
src/: CMakeLists.txt  bisection.cpp  derivative.cpp  false-position.cpp  newton-raphson.cpp
tests/: CMakeLists.txt  bisection.cpp  derivative.cpp  false-position.cpp  newton-raphson.cpp
